--- a/Portfolio/src/main.css
+++ b/Portfolio/src/main.css
@@ -1,4 +1,37 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap");
+
 body {
-  background: black;
-  color: white;
+  font-family: "Roboto", sans-serif;
+  background: var(--color-bg);
+  color: var(--color-white);
+  line-height: 1.5;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
+}
+
+/* CSS variables - you can use these variables anywhere in the project */
+:root {
+  --color-bg: #50514f;
+  --color-bg-variant: #70c1b3;
+  --color-primary: #247ba0;
+  --color-primary-variant: #1c5d79;
+  --color-yellow: #ffe066;
+  --color-white: #fff;
+  --color-red: #f25f5c;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+::-webkit-scrollbar {
+  display: none;
 }
