--- a/Portfolio/src/components/header/header.css
+++ b/Portfolio/src/components/header/header.css
@@ -26,8 +26,18 @@ header {
   margin-top: 1rem;
 }
 
-p{
+p {
   line-height: 1.25rem;
   margin-left: 35rem;
-  margin-right: 35rem;
+  margin-right: 35rem;  
+}
+
+.profile-picture {
+  border-radius: 50%;
+  width: 22rem;
+  margin-top: 2rem;
+}
+
+.about-text {
+  margin-top: 2rem;
 }
