--- a/Portfolio/src/components/header/header.css
+++ b/Portfolio/src/components/header/header.css
@@ -1,5 +1,4 @@
 header {
-  height: 100vh;
   padding-top: 5rem;
   overflow: hidden;
 }
@@ -27,7 +26,7 @@ header {
 }
 
 p {
-  line-height: 1.25rem;  
+  line-height: 1.25rem;
 }
 
 .profile-picture {
@@ -38,4 +37,12 @@ p {
 
 .about-text {
   margin-top: 2rem;
+}
+
+.scroll-down {
+  position: absolute;
+  top: 2rem;
+  transform: rotate(90deg);
+  right: -10rem;
+  font-size: large;
 }
