navigation bar done

--- a/Portfolio/src/main.css
+++ b/Portfolio/src/main.css
@@ -22,7 +22,7 @@ body {
 :root {
   --color-bg: #50514f;
   --color-bg-variant: #70c1b3;
-  --color-primary: #247ba0;
+  --color-primary: #198754;
   --color-primary-variant: #1c5d79;
   --color-yellow: #ffe066;
   --color-white: #fff;
