--- a/Portfolio/src/components/nav/nav.css
+++ b/Portfolio/src/components/nav/nav.css
@@ -4,12 +4,28 @@ nav {
   top: 35vh;
   right: 30vh;
   font-size: large;
-  border: 0.5px solid var(--color-secondary);
-  border-radius: 1.2rem;
+  border: 0.5px solid var(--color-primary);
+  border-radius: 0.6rem;
   backdrop-filter: blur(12px);
-  padding: 0.5rem 1.5rem;
+  padding: 0.5rem 1rem;
   display: flex;
   flex-direction: column;
   gap: 1rem;
+}
 
+nav a {
+  background: transparent;
+  padding: 0.5rem;
+  border-radius: 0.6rem;
+  display: flex;
+  color: var(--color-primary);
+}
+
+nav a:hover {
+  background: var(--color-secondary);
+}
+
+nav a.active {
+  background: var(--color-primary);
+  color: var(--color-white);
 }
