--- a/Portfolio/src/components/experience/experience.css
+++ b/Portfolio/src/components/experience/experience.css
@@ -1,17 +1,19 @@
+#experience {
+  padding-top: 4rem;
+  text-align: center;
+  width: var(--container-width-sm);
+}
+
 .experience__container {
   font-size: 2rem;
   border: 1px solid var(--color-secondary);
   border-radius: 1rem;
   backdrop-filter: blur(15px);
   padding: 0.5rem 1rem;
-}
-
-.experience__content {
   display: flex;
   justify-content: center;
-  gap: 2rem;
+  text-align: center;
+  gap: 2.2rem;
 }
 
-.experience_details {
-  text-align: center;
-}
+/* You must make the NAV BAR responsive and fix the style for this component */
