--- a/Portfolio/src/components/header/header.css
+++ b/Portfolio/src/components/header/header.css
@@ -1,10 +1,12 @@
 header {
-  padding-top: 5rem;
   height: 100vh;
   overflow: hidden;
 }
 
 .header__container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   text-align: center;
   height: 100%;
   position: relative;
@@ -45,7 +47,7 @@ p {
 
 .scroll-down {
   position: absolute;
-  top: 2rem;
+  top: 6rem;
   transform: rotate(90deg);
   right: -10rem;
   font-size: large;
