--- a/Portfolio/src/components/header/header.css
+++ b/Portfolio/src/components/header/header.css
@@ -1,14 +1,13 @@
 header {
   height: 100vh;
-  overflow: hidden;
-}
-
-.header__container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   text-align: center;
-  height: 100%;
+  position: relative;
+}
+
+.header__container {
   position: relative;
 }
 
