--- a/Portfolio/src/components/nav/nav.css
+++ b/Portfolio/src/components/nav/nav.css
@@ -1,16 +1,16 @@
 nav {
   width: max-content;
+  height: 100%;
   position: fixed;
-  top: 35vh;
-  right: 30vh;
+  top: 0vh;
   font-size: large;
   border: 0.5px solid var(--color-primary);
-  border-radius: 0.6rem;
   backdrop-filter: blur(12px);
   padding: 0.5rem 1rem;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  justify-content: center;
+  gap: 2rem;
 }
 
 nav a {
@@ -28,4 +28,23 @@ nav a:hover {
 nav a.active {
   background: var(--color-primary);
   color: var(--color-white);
+}
+
+@media screen and (max-width: 600px) {
+  nav {
+    width: 100%;
+    height: fit-content;
+    position: fixed;
+    left: 50%;
+    top: 94vh;
+    transform: translate(-50%);
+    bottom: 2rem;
+    font-size: large;
+    border: 0.5px solid var(--color-primary);
+    backdrop-filter: blur(12px);
+    padding: 0.5rem 1rem;
+    display: flex;
+    flex-direction: row;
+    gap: 2rem;
+  }
 }
