--- a/Portfolio/src/components/work/work.css
+++ b/Portfolio/src/components/work/work.css
@@ -1,5 +1,9 @@
 #work {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .portfolio__container {
@@ -14,6 +18,7 @@
   flex-direction: column;
   justify-content: center;
 }
+
 .porfolio__image {
   border-radius: 0.5rem;
   width: 100%;
