--- a/Portfolio/src/components/nav/nav.css
+++ b/Portfolio/src/components/nav/nav.css
@@ -4,8 +4,7 @@ nav {
   position: fixed;
   top: 0vh;
   font-size: large;
-  border: 0.5px solid var(--color-primary);
-  backdrop-filter: blur(12px);
+  background: #fff;
   padding: 0.5rem 1rem;
   display: flex;
   flex-direction: column;
