--- a/Portfolio/src/main.css
+++ b/Portfolio/src/main.css
@@ -21,10 +21,7 @@ body {
 /* Not sure if I will use these colors, remember to choose different color pallete */
 :root {
   --color-bg: #f5f5f7;
-  --color-bg-variant: #70c1b3;
   --color-primary: #313131;
-  --color-primary-variant: #1c5d79;
-  --color-yellow: #ffe066;
   --color-white: #fff;
   --color-secondary: #6f6e73;
 
@@ -48,7 +45,7 @@ a {
 }
 
 a:hover {
-  color: var(--color-white);
+  color: var(--color-primary);
 }
 
 .container {
@@ -61,6 +58,11 @@ section {
   margin-top: 4rem;
 }
 
-h1 {
-  font-size: larger;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: var(--color-primary);
 }
