--- a/Portfolio/src/main.css
+++ b/Portfolio/src/main.css
@@ -62,7 +62,36 @@ h1,
 h2,
 h3,
 h4,
-h5,
-h6 {
+h5 {
   color: var(--color-primary);
+}
+
+h6 {
+  color: var(--color-secondary);
+}
+
+p {
+  text-align: justify;
+}
+
+.btn-outline-success {
+  border: 1px solid var(--color-primary);
+  color: var(--color-primary);
+}
+
+.btn-outline-secondary {
+  border: 1px solid var(--color-secondary);
+  color: var(--color-secondary);
+}
+
+.btn-outline-success:hover {
+  background: var(--color-primary);
+  border: 1px solid var(--color-primary);
+  color: var(--color-white);
+}
+
+.btn-outline-secondary:hover {
+  background: var(--color-secondary);
+  border: 1px solid var(--color-secondary);
+  color: var(--color-white);
 }
