responsive nav bar - done

--- a/Portfolio/src/components/nav/nav.css
+++ b/Portfolio/src/components/nav/nav.css
@@ -32,15 +32,14 @@ nav a.active {
 
 @media screen and (max-width: 600px) {
   nav {
-    width: 100%;
+    width: 85%;
     height: fit-content;
     position: fixed;
-    left: 50%;
-    top: 94vh;
-    transform: translate(-50%);
-    bottom: 2rem;
+    top: 90vh;
+    right: 50%;
+    transform: translateX(50%);
     font-size: large;
-    border: 0.5px solid var(--color-primary);
+    border-radius: 25px;
     backdrop-filter: blur(12px);
     padding: 0.5rem 1rem;
     display: flex;
