--- a/Portfolio/src/components/header/header.css
+++ b/Portfolio/src/components/header/header.css
@@ -1,20 +1,20 @@
 header {
   height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  text-align: center;
-  position: relative;
+  min-height: fit-content;
 }
 
 .header__container {
-  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
 
 .buttons {
   display: flex;
   justify-content: center;
-  gap: 0.5rem;
+  gap: 1rem;
   margin-top: 2rem;
 }
 
@@ -35,10 +35,6 @@ p {
   margin-top: 2rem;
 }
 
-.profile-picture__position {
-  display: flex;
-  justify-content: center;
-}
 
 .about-text {
   margin-top: 2rem;
