--- a/Portfolio/src/main.css
+++ b/Portfolio/src/main.css
@@ -50,12 +50,12 @@ a:hover {
 
 .container {
   width: var(--container-width-sm);
-  margin: 0 auto;
 }
 
 section {
   height: 100vh;
   margin-top: 4rem;
+  min-height: fit-content;
 }
 
 h1,
