--- a/Portfolio/src/main.css
+++ b/Portfolio/src/main.css
@@ -1,12 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap");
 
-body {
-  font-family: "Roboto", sans-serif;
-  background: var(--color-bg);
-  color: var(--color-secondary);
-  line-height: 1.5;
-}
-
 * {
   margin: 0;
   padding: 0;
@@ -15,6 +8,13 @@ body {
   box-sizing: border-box;
   list-style: none;
   text-decoration: none;
+}
+
+body {
+  font-family: "Roboto", sans-serif;
+  background: var(--color-bg);
+  color: var(--color-secondary);
+  line-height: 1.5;
 }
 
 /* CSS variables - you can use these variables anywhere in the project */
@@ -42,6 +42,7 @@ a {
   color: var(--color-secondary);
   text-decoration: none;
   font-weight: 300;
+  transition: all 500ms ease;
 }
 
 a:hover {
