--- a/Portfolio/src/components/navbarTest/navbarTest.css
+++ b/Portfolio/src/components/navbarTest/navbarTest.css
@@ -29,3 +29,48 @@ a:hover {
   text-decoration: underline;
   text-underline-offset: 0.5rem;
 }
+
+#mobile__nav {
+  display: none;
+}
+
+.mobile__menu {
+  position: relative;
+  display: inline-block;
+}
+
+.menu__icon {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  cursor: pointer;
+  width: 30px;
+  height: 25px;
+}
+
+.menu__icon span {
+  width: 100%;
+  height: 1px;
+  background-color: var(--color-primary);
+  transition: all 0.3 ease-in-out;
+}
+
+.menu__links {
+  position: absolute;
+  right: 0;
+  background-color: var(--color-white);
+  width: fit-content;
+  max-height: 0;
+  overflow: hidden;
+  transition: all 0.3 ease-in-out;
+}
+
+@media screen and (max-width: 1200px) {
+  #nav__test {
+    display: none;
+  }
+
+  #mobile__nav {
+    display: flex;
+  }
+}
