--- a/Portfolio/src/components/header/header.css
+++ b/Portfolio/src/components/header/header.css
@@ -1,15 +1,11 @@
 header {
   height: 100vh;
-  min-height: fit-content;
+  display: flex;
+  align-items: center;
 }
 
 .header__container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
   text-align: center;
-  padding-top: 6vh;
 }
 
 .buttons {
@@ -53,6 +49,8 @@ p {
     display: none;
   }
   header .container {
+    margin: auto;
+    padding-top: 2rem;
     width: var(--container-width-lg);
   }
 
