--- a/Portfolio/src/components/contact/contact.css
+++ b/Portfolio/src/components/contact/contact.css
@@ -1,18 +1,18 @@
 #contact {
-  text-align: center;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  gap: 1rem;
-}
-
-.contact__img {
-  width: 50%;
+  align-items: center;
+  text-align: center;
 }
 
 .container__contact {
-  width: var(--container-width-lg);
   display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.contact__form {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
   align-items: center;
 }
 
@@ -20,4 +20,18 @@ form {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+}
+
+@media screen and (max-width: 600px) {
+  /* #contact {
+    display: block;
+  }
+
+  section .container__contact {
+    width: var(--container-width-lg);
+  }
+
+  .contact__form {
+    display: block;
+  } */
 }
