--- a/Portfolio/src/components/nav/nav.css
+++ b/Portfolio/src/components/nav/nav.css
@@ -32,15 +32,15 @@ nav a.active {
 
 @media screen and (max-width: 600px) {
   nav {
-    width: 85%;
     height: fit-content;
     position: fixed;
-    top: 90vh;
+    top: 92vh;
     right: 50%;
     transform: translateX(50%);
     font-size: large;
+    border: 1px solid var(--color-secondary);
+    background: var(--color-white);
     border-radius: 25px;
-    backdrop-filter: blur(12px);
     padding: 0.5rem 1rem;
     display: flex;
     flex-direction: row;
