--- a/Portfolio/src/components/work/work.css
+++ b/Portfolio/src/components/work/work.css
@@ -33,8 +33,13 @@
 }
 
 @media screen and (max-width: 600px) {
-  .portfolio__container {
+  #work {
+    display: block;
+    padding-top: 2rem;
+  }
+  section .portfolio__container {
     display: flex;
     flex-direction: column;
+    margin-top: 2rem;
   }
 }
