--- a/Portfolio/src/components/contact/modalContact.css
+++ b/Portfolio/src/components/contact/modalContact.css
@@ -7,4 +7,5 @@
 .btn.btn-primary:hover {
   color: var(--color-white);
   background-color: var(--color-primary);
+  border: 1px solid var(--color-primary);
 }
