--- a/Portfolio/src/components/contact/contact.css
+++ b/Portfolio/src/components/contact/contact.css
@@ -14,6 +14,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   align-items: center;
+  margin-top: 2rem;
 }
 
 form {
@@ -26,7 +27,7 @@ form {
   margin-right: 0.2rem;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 810px) {
   .container.container__contact {
     width: var(--container-width-lg);
   }
